--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "afsakar/filament-otp-login": "^1.3",
         "bezhansalleh/filament-language-switch": "^3.1",
+        "carlos-meneses/laravel-mpdf": "^2.1",
         "filament/filament": "^3.2",
         "filament/notifications": "^3.2",
         "filament/spatie-laravel-translatable-plugin": "^3.2",
