--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "afsakar/filament-otp-login": "^1.3",
+        "aymanalhattami/filament-context-menu": "^1.0",
         "bezhansalleh/filament-language-switch": "^3.1",
         "carlos-meneses/laravel-mpdf": "^2.1",
         "filament/filament": "^3.2",
