--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,15 @@
         "filament/filament": "^3.2",
         "filament/notifications": "^3.2",
         "filament/spatie-laravel-translatable-plugin": "^3.2",
+        "guava/filament-knowledge-base": "^1.10",
+        "guava/tutorials": "^1.1",
+        "lara-zeus/quantity": "^1.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "mokhosh/filament-jalali": "^4.4",
         "mokhosh/filament-rating": "^1.4",
-        "shuvroroy/filament-spatie-laravel-backup": "^2.2"
+        "shuvroroy/filament-spatie-laravel-backup": "^2.2",
+        "swisnl/filament-backgrounds": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
